@@ -106,6 +106,7 @@ Ext.extend(MODx.grid.Package,MODx.grid.Grid,{
                         }
                         
                         pd.fireEvent('proceed','modx-pd-selpackage');
+                        pd.setPosition(null,0);
                     },this,{single:true});
                     
                     this.windows[x].show(e.target);
