@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added Search bar to Package Browser, now can search entire repository
 - Fixed height of Package Browser to not go too far down screen
 - Fixed modRestSockClient to properly strip HTTP headers and return only XML
 - Added modStaticResource methods: getSourceFile() and getSourceFileSize()
